Still can't figure out why the subcategory is not showing up. I did some small fixes

--- a/soen341webapp/client/main.css
+++ b/soen341webapp/client/main.css
@@ -25,6 +25,8 @@ margin-left: 400px;
     font-weight: bolder;
 }
 .like-button{
+    right: 0;
+    top:10px;
     width: 20px;
     height: 20px;
     background-image: url("http://inventure.cmlinks.com/images/Up_Arrow.jpg");
@@ -41,16 +43,19 @@ margin-left: 400px;
     display: inline-block;
 }
 .brand-logo{
-    margin-top:5px;
+    position:absolute;
+    left:0; right:0;
+    margin:auto;
+
+    max-width:100%;
+    max-height:100%;
 }
 .searchBackground{
     background-image: url("https://image.ibb.co/dV9C36/search_Background.jpg");
     background-size: 1700px 500px;
     width: 100%;
     height: 400px;
-    padding-left: 25%;
     padding-top: 175px;
-    padding-bottom: 150px;
 }
 .searching{
     border-style: solid;
@@ -58,8 +63,13 @@ margin-left: 400px;
     border-color: darkturquoise;
     width: 700px;
     background-color: whitesmoke;
-
+    position:absolute;
+    left:0; right:0;
+    margin:auto;
+    max-width:100%;
+    max-height:100%;
 }
+
 .feature{
     margin-left: 33%;
     width: 500px;
@@ -68,6 +78,12 @@ margin-left: 400px;
     font-family: "Droid Sans";
     color: white;
     border: transparent;
+    position:absolute;
+    left:0; right:0;
+    margin:auto;
+
+    max-width:100%;
+    max-height:100%;
 }
 .footing{
      margin-left: 250px;
